[gd_scene load_steps=17 format=3 uid="uid://ddufykptqanl7"]

[ext_resource type="Script" uid="uid://b4c8q2fvhicv8" path="res://scenes/main/player.gd" id="1_68xwl"]
[ext_resource type="Texture2D" uid="uid://c5thlea8t0ru3" path="res://sprites/zaine_idle1.png" id="1_nybob"]
[ext_resource type="Texture2D" uid="uid://dgbxs4niigp66" path="res://sprites/zaine_idle2.png" id="2_68xwl"]
[ext_resource type="PackedScene" uid="uid://dij626x8edncs" path="res://scenes/items/weapons/sword.tscn" id="2_m5ugi"]
[ext_resource type="PackedScene" uid="uid://c3hm5jneguvsh" path="res://scenes/items/potions/health_potion.tscn" id="3_0f7gw"]
[ext_resource type="Texture2D" uid="uid://6ofbi85nmftt" path="res://sprites/blank.png" id="3_t8yk2"]
[ext_resource type="Texture2D" uid="uid://bfv2ipk7utf85" path="res://sprites/zaine_walk1.png" id="3_wwvfn"]
[ext_resource type="Texture2D" uid="uid://rh38gmteeaha" path="res://sprites/zaine_walk2.png" id="4_t8yk2"]
[ext_resource type="Texture2D" uid="uid://rs3clmqas3l3" path="res://sprites/crosshair.png" id="7_t8yk2"]
[ext_resource type="AudioStream" uid="uid://c2atch7yv2q1u" path="res://sounds/dash_sound.wav" id="8_3vq1g"]
[ext_resource type="AudioStream" uid="uid://cx6qnqe40wotv" path="res://sounds/hit.wav" id="10_bnwh7"]
[ext_resource type="Texture2D" uid="uid://bti8hssy40ds6" path="res://sprites/health_potion_full.png" id="12_0r2ug"]
[ext_resource type="Shader" uid="uid://bn8l5q3ifu3wt" path="res://styles/outline_blue.gdshader" id="16_i4vh7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m5ugi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nybob")
}, {
"duration": 1.0,
"texture": ExtResource("3_t8yk2")
}],
"loop": true,
"name": &"hit",
"speed": 8.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nybob")
}, {
"duration": 1.0,
"texture": ExtResource("2_68xwl")
}],
"loop": true,
"name": &"idle",
"speed": 1.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wwvfn")
}, {
"duration": 1.0,
"texture": ExtResource("4_t8yk2")
}],
"loop": true,
"name": &"walk",
"speed": 2.5
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vq1g"]
radius = 4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mrsny"]
shader = ExtResource("16_i4vh7")
shader_parameter/intensity = 50
shader_parameter/precision = 0.02
shader_parameter/flipColors = false
shader_parameter/use_outline_uv = false
shader_parameter/useTexture = false

[node name="Player" type="CharacterBody2D" groups=["players"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_68xwl")
starting_inventory = Array[PackedScene]([ExtResource("2_m5ugi"), ExtResource("3_0f7gw")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_m5ugi")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3vq1g")

[node name="Dash" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Dash"]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="Dash"]
wait_time = 0.6
one_shot = true

[node name="GraceTimer" type="Timer" parent="Dash"]
wait_time = 0.2
one_shot = true

[node name="DashSound" type="AudioStreamPlayer2D" parent="Dash"]
stream = ExtResource("8_3vq1g")
bus = &"Sounds"

[node name="Reticle" type="Sprite2D" parent="."]
texture = ExtResource("7_t8yk2")

[node name="Item" type="Node2D" parent="."]

[node name="Point" type="Node2D" parent="Item"]
position = Vector2(0, -16)

[node name="IFrames" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_bnwh7")
bus = &"Sounds"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0

[node name="Hotbar" type="HBoxContainer" parent="."]
visible = false
offset_left = -64.0
offset_top = -49.0
offset_right = 64.0
offset_bottom = -9.0
theme_override_constants/separation = -62
alignment = 1

[node name="Item" type="TextureRect" parent="Hotbar"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_0r2ug")
expand_mode = 2
stretch_mode = 5

[node name="Item2" type="TextureRect" parent="Hotbar"]
material = SubResource("ShaderMaterial_mrsny")
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_0r2ug")
expand_mode = 2
stretch_mode = 5

[node name="Item3" type="TextureRect" parent="Hotbar"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_0r2ug")
expand_mode = 2
stretch_mode = 5

[node name="HotbarTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="HotbarTimer" to="." method="_on_hotbar_timer_timeout"]
